Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31974

Can't render non-latin text on wince

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0 Alpha
    • 5.1.0 RC1
    • GUI: Font handling
    • None
    • Freescale iMx515
      windows ce 6
      visual studio 2008 sp1
    • f079e9e77fa3e55a5ed7d1798557154448e75cfc

      Because of wince features. qt on wince can't render thai text
      so we want use freetype rendering engine.

      but qt/wince can't render non-latin characters looks like attached png images.

      the text in edit box is

      English
      French
      japanese
      korean
      thai

        1. freetype.png
          3 kB
          Darius Kim
        2. native.png
          3 kB
          Darius Kim
        3. thai_freetype.png
          31 kB
          Darius Kim
        4. thai_native.png
          20 kB
          Darius Kim
        For Gerrit Dashboard: QTBUG-31974
        # Subject Branch Project Status CR V

            ritt.ks Konstantin Ritt
            darius Darius Kim
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes